--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5",
-        "symfony/maker-bundle": "^1.61"
+        "symfony/browser-kit": "6.4.*",
+        "symfony/css-selector": "6.4.*",
+        "symfony/maker-bundle": "^1.61",
+        "symfony/phpunit-bridge": "^7.1"
     }
 }
